--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,27 +1,228 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300,100);
+@import url(http://fonts.googleapis.com/css?family=Roboto:300,500);
 
-body {
-    font-family: "Lato", sans-serif;
+
+/* M O B I L E */
+
+@media (max-width: 6in) {
+    body {
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    div {
+        line-height: 0;
+    }
+    
+    #cover-mobile {
+        display: block;
+        width: 100%;
+    }
+    
+    #cover-desktop {
+        display: none;
+    }
+    
+    #about {
+        display: block;
+        width: 100%;
+        height: 135vw;
+        background: linear-gradient(0deg, #DBDBDB, #ffffff)
+    }
+    
+    #about-graphic {
+        display: block;
+        width: 90%;
+        margin: 0 0 0 5%;
+    }
+    
+    #intro {
+        line-height: 1.62;
+        width: 85%;
+        margin: 7.5% 0 0 7.5%;
+        font-family: Roboto, sans-serif;
+        font-weight: 300;
+        font-size: 3.8vw;
+        text-align: center;
+    }
+    
+    #dot-stop {
+        width: 20%;
+        margin: 4%
+    }
+    
+    #icons {
+        margin: 7.5% 0 0 0;
+        text-align: center;
+    }
+    
+    #instagram {
+        display: inline;
+        width: 10%;
+    }
+    
+    #instagram:hover {
+        opacity: 0.75;
+    }
+    
+    #facebook {
+        display: inline;
+        width: 9.25%;
+        margin-bottom: 0.375vw;
+        margin-left: 6.2vw;
+        margin-right: 5.2vw;
+    }
+    
+    #facebook:hover {
+        opacity: 0.75;
+    }
+    
+    #email {
+        display: inline;
+        width: 12%;
+        margin-bottom: 1.5vw
+    }
+    
+    #email:hover {
+        opacity: 0.75;
+    }
+    
+    #address {
+        display: block;
+        margin: 6.2vw;
+        font-family: Roboto, sans-serif;
+        font-weight: 500;
+        font-size: 3.8vw;
+    }
+    
+    #gallery {
+        display: block;
+        width: 100%;
+    }
+    
+    .design {
+        display: block;
+        width: 100%;
+        height: 100vw;
+    }
+    
+    .info {
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+    }
+    
+    .title {
+        position: relative;
+        top: 4%;
+        line-height: 1.62;
+        font-family: Roboto, sans-serif;
+        font-weight: 500;
+        font-size: 8vw;
+        width: 90%;
+        margin: 0 0 0 5%;
+    }
+    
+    .description {
+        position: relative;
+        top: 4%;
+        line-height: 1.62;
+        font-family: Roboto, sans-serif;
+        font-weight: 300;
+        font-size: 3.8vw;
+        width: 90%;
+        margin: 0 0 0 5%;
+    }
+    
+    #d1 {
+        display: block;
+        position: absolute;
+        top: 812.78vw;
+        width: 100%;
+    }
+    
+    #d1:active {
+        visibility: hidden;
+    }
+    
+    #copyright {
+        display: block;
+        width: 100%;
+        height: 10vw;
+        background-color: #ffffff;
+    }
+
+    #copyright p {
+        position: relative;
+        font-family: Roboto, sans-serif;
+        font-weight: 300;
+        font-size: 3.8vw;
+        text-align: center;
+        top: 50%;
+        }
 }
 
-#text {
-    position: absolute;
-    top: 45%;
-    transform: translateY(-50%);
-    width: 100%;
-}
 
-#hello {
-    color: #202020;
-    font-size: 6vw;
-    font-weight: 100;
-    text-align: center;
-    line-height: 0;
-}
+/* D E S K T O P */
 
-#message {
-    color: #a0a0a0;
-    font-size:1.2vw;
-    font-weight: 300;
-    text-align: center;
+@media (min-width: 6in) {
+    body {
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    div {
+        line-height: 0;
+    }
+
+    #cover-mobile {
+        display: none;
+    }
+
+    #cover-desktop {
+        display: block;
+        width: 100%;
+    }
+
+    #about {
+        
+    }
+    
+    #gallery {
+        display: block;
+        margin: 0 0 0 0;
+        background-color: #ffffff;
+    }
+
+    .design {
+        display: inline-block;
+        width: 33.33vw;
+        height: 33.33vw;
+        background-color: #f0f0f0;
+    }
+
+    #copyright {
+        display: block;
+        width: 100%;
+        height: 0.4in;
+        background-color: #ffffff;
+    }
+
+    #copyright p {
+        position: relative;
+        font-family: Roboto, sans-serif;
+        font-weight: 300;
+        font-size: 0.15in;
+        text-align: center;
+        top: 50%;
+        }
 }
