--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 
 /* M O B I L E */
 
-@media (max-width: 6in) {
+@media (min-resolution: 326dpi) and (min-width: 640px) {
     body {
         padding: 0 0 0 0;
         margin: 0 0 0 0;
