--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,10 @@
 
 /* M O B I L E */
 
-@media (min-resolution: 326dpi) and (min-width: 640px) {
+@media screen 
+    and (min-device-width : 1080px) 
+    and (max-device-width : 1920px) 
+    and (min-resolution: 401dpi) {
     body {
         padding: 0 0 0 0;
         margin: 0 0 0 0;
