Mobile test #1 cont.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -168,7 +168,7 @@
 }
 
 
-/* D E S K T O P */ 
+/* D E S K T O P */ /*
 
 @media (max-resolution: 325dpi) {
     body {
@@ -226,3 +226,4 @@
         top: 50%;
         }
 }
+*/
