--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,18 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,500);
 
 
-/* M O B I L E */
+/*
+
+|\/| _ |_ .| _
+|  |(_)|_)||(-'
+
+*/
 
 @media screen and (max-aspect-ratio: 1/1) {
+    html {
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+    }
+    
     body {
         padding: 0 0 0 0;
         margin: 0 0 0 0;
@@ -168,7 +177,12 @@
 }
 
 
-/* D E S K T O P */
+/*
+ _
+| \ _  _ |_ |_ _  _
+|_/(-''-,|\ |_(_)|_)
+                 |
+*/
 
 @media screen and (min-aspect-ratio: 1/1) {
     body {
