--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body {
 
 #hello {
     color: #202020;
-    font-size: 38px;
+    font-size: 6vh;
     font-weight: bold;
     text-align: center;
     line-height: 0;
@@ -21,7 +21,7 @@ body {
 
 #message {
     color: #a0a0a0;
-    font-size: 16px;
+    font-size: 3vh;
     font-weight: normal;
     text-align: center;
 }
