--- a/work.css
+++ b/work.css
@@ -146,7 +146,7 @@
     }
     
     .article-item {
-        width: 100%;
+        width: 567pt;
         margin-top: 2.25em;
         margin-bottom: 2.25em;
     }
