--- a/work.css
+++ b/work.css
@@ -101,9 +101,8 @@
         display: inline-block;
         float: left;
         width: 183pt;
-        height: 226pt;
         margin-right: 6pt;
-        margin-bottom: 18pt;
+        margin-bottom: 10pt;
         vertical-align: top;
         font-size: 12pt;
         line-height: 0.6em;
@@ -171,8 +170,8 @@
     
     .article-item {
         width: 561pt;
-        margin-top: 3em;
-        margin-bottom: 3em;
+        margin-top: 36pt;
+        margin-bottom: 36pt;
     }
     
     .article-image {
@@ -349,9 +348,8 @@
         display: inline-block;
         float: left;
         width: 45.25vw;
-        height: 55.9vw;
         margin-right: 1.5vw;
-        margin-bottom: 4vw;
+        margin-bottom: 3vw;
         vertical-align: top;
         font-size: 3vw;
         line-height: 0.4em;
