--- a/work.css
+++ b/work.css
@@ -1,7 +1,6 @@
 @media screen and (min-aspect-ratio: 3/4) {
     body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
         padding: 0 0 0 0;
         margin: 0 0 0 0;
     }
@@ -175,6 +174,7 @@
     
     .article-image {
         width: 100%;
+        margin-bottom: 6pt;
     }
     
     .caption {
@@ -182,6 +182,7 @@
         font-weight: normal;
         font-size: 10pt;
         line-height: 1.25em;
+        margin-top: 6pt;
     }
     
     .code {
@@ -194,32 +195,10 @@
         padding: 4pt 16pt;
     }
     
-    /*
-    .descriptor {
-        font-size: 12pt;
-        padding-left: 72pt;
+    video {
+        width: 100%;
+        margin-bottom: 6pt;
     }
-    
-    .descriptor-title {
-        position: relative;
-        left: -72pt;
-        color: #808080;
-        font-weight: bold;
-        line-height: 1.25em;
-        margin-top: -0.1em;
-        margin-bottom: 0;
-    }
-    
-    .descriptor-body {
-        position: relative;
-        top: -1.25em;
-        color: #808080;
-        font-weight: normal;
-        line-height: 1.25em;
-        margin-top: 0;
-        margin-bottom: 0.1em;
-    }
-    */
 
     #copyright-desktop {
         color: #808080;
@@ -241,7 +220,6 @@
 @media screen and (max-aspect-ratio: 3/4) {
     body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
         padding: 0 0 0 0;
         margin: 0 0 0 0;
     }
@@ -434,6 +412,7 @@
     
     .article-image {
         width: 100%;
+        margin-bottom: 1.5vw;
     }
     
     .caption {
@@ -441,6 +420,7 @@
         font-weight: normal;
         font-size: 3vw;
         line-height: 1.25em;
+        margin-top: 1.5vw;
     }
     
     .code {
@@ -453,32 +433,10 @@
         padding: 3vw 3vw;
     }
     
-    /*
-    .descriptor {
-        font-size: 4vw;
-        margin-top: 0;
-        margin-bottom: 1.25em;
-        padding-left: 24vw;
-        padding-right: 2vw;
+    video {
+        width: 100%;
+        margin-bottom: 1.5vw;
     }
-    
-    .descriptor-title {
-        position: absolute;
-        left: 0;
-        color: #808080;
-        font-weight: bold;
-        line-height: 1.25em;
-        margin-top: -0.1em;
-        margin-bottom: 0;
-    }
-    
-    .descriptor-body {
-        color: #808080;
-        font-weight: normal;
-        line-height: 1.25em;
-        margin: 0;
-    }
-    */
     
     #copyright-desktop {
         display: none;
